# forzium

./: .gitignore  MIGRATION_LOG.md  README.md  TASK.md
forzium/: PYTHON_TASK.md  Python_Directory_Structure.md  __init__.py  dependencies.py  exceptions.py  request.py  response.py  validators.py
forzium/_module/: __init__.py  _ffi.py  _ffi.pyi  init.py
forzium/background/: __init__.py
forzium/exceptions/: __init__.py
forzium/middleware/: __init__.py
forzium/request/: __init__.py
forzium/response/: __init__.py
forzium/routing/: __init__.py
forzium/security/: __init__.py
forzium/tests/: test_dependencies.py
forzium/validation/: validators.py
forzium/websocket/: __init__.py
module/: Cargo.toml  Rust_Directory_Structure.md
module/forzium-core/: Cargo.toml
module/forzium-core/src/middleware/: standard.rs  tests.rs  tests_middleware.rs
module/forzium-core/src/request/: mod.rs  parser.rs  types.rs
module/forzium-core/src/response/: serializer.rs  tests_response.rs  types.rs
module/forzium-core/src/validation/: mod.rs  validators.rs
module/forzium-core/src/websocket/: connection.rs  handler.rs  mod.rs  protocol.rs
module/pyo3-forzium/: Cargo.toml
module/pyo3-forzium/src/: lib.rs  request.rs  response.rs  validation.rs
module/pyo3-forzium/src/interface/: mod.rs
shared/constants/: limit.json
shared/proto/: ValidationService.proto
shared/schemas/: validation.json
