[workspace]
members = ["forzium-core", "pyo3-forzium"]
resolver = "2"


[workspace.dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py311"] }
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true